# Django_fastapi_poc

./: README.md  Sahil_Singh_Py_Developer__docx.pkl  db.sqlite3  main.py  model.py  pdf_collection.pkl  pyproject.toml  requirements.txt  start copy.sh  start.sh
Dockerfiles/: Dockerfile  docker-compose.yml
myapp/: admin.py  forms.py  models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_remove_professorupload_teacher_and_more.py  0003_alter_user_id.py  0004_alter_user_id.py  0005_alter_user_id.py
myapp/templates/: home.html  professor_login.html  professor_register.html  student_login.html  student_register.html  user_login.html  user_register.html
myproject/: settings.py  urls.py
myvenv/: pyvenv.cfg
static/: dashboard.html  generate_response.html  process_all_pdfs.html  upload_pdf.html
volumes/milvus/rdb_data/: 000021.sst  000027.sst  IDENTITY  LOG  LOG.old.1723464256680376  LOG.old.1723528469581052  LOG.old.1724136567099394  LOG.old.1724139740879531  LOG.old.1724150132213818  LOG.old.1724150408552611  LOG.old.1724313962660201  LOG.old.1724390929312259  MANIFEST-000018  MANIFEST-000028  MANIFEST-000049  MANIFEST-000055
volumes/milvus/rdb_data_meta_kv/: 000009.sst  000015.sst  000032.sst  000036.sst  000042.sst  000048.sst  000059.sst  IDENTITY  LOG  LOG.old.1723464255932447  LOG.old.1723528468651511  LOG.old.1724136566661216  LOG.old.1724139739251565  LOG.old.1724150131275378  LOG.old.1724150408355294  LOG.old.1724313961033436  LOG.old.1724390927192690  MANIFEST-000016  MANIFEST-000028  MANIFEST-000049  MANIFEST-000055
(+156 files in other folders)
