[tool.poetry]
name = "django-fastapi"
version = "0.1.0"
description = ""
authors = ["sahilsinghavisoft <sahil.singh@avisoft.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
django = "^5.1"
uvicorn = "^0.30.5"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
