[tool.poetry]
name = "django-fastapi-poc"
version = "0.1.0"
description = ""
authors = ["sahilsinghavisoft <sahil.singh@avisoft.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
django = "^5.1"
uvicorn = "^0.30.5"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"
psycopg2-binary = "^2.9.9"
sentence-transformers = "^2.2.2" # or the latest version available
openai = "^1.40.6" # or the latest version available
pdfplumber = "^0.8.0"
python-multipart="^0.0.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
